WIP: toDescription.